[gd_scene load_steps=9 format=1]

[ext_resource path="res://player2.gd" type="Script" id=1]
[ext_resource path="res://camera.gd" type="Script" id=2]
[ext_resource path="res://untitled.scn" type="PackedScene" id=3]
[ext_resource path="res://FPS.gd" type="Script" id=4]
[ext_resource path="res://house.scn" type="PackedScene" id=5]

[sub_resource type="Environment" id=1]

ambient_light/enabled = true
ambient_light/color = Color( 1, 1, 1, 1 )
ambient_light/energy = 1.0
fxaa/enabled = false
background/mode = 1
background/color = Color( 0, 0, 0, 1 )
background/energy = 1.0
background/scale = 1.0
background/glow = 0.0
background/canvas_max_layer = null
glow/enabled = false
glow/blur_passes = 1
glow/blur_scale = 1
glow/blur_strength = 1
glow/blur_blend_mode = null
glow/bloom = 0.0
glow/bloom_treshold = 0.5
dof_blur/enabled = false
dof_blur/blur_passes = 1
dof_blur/begin = 100.0
dof_blur/range = 10.0
hdr/enabled = false
hdr/tonemapper = 0
hdr/exposure = 0.4
hdr/white = 1.0
hdr/glow_treshold = 0.95
hdr/glow_scale = 0.2
hdr/min_luminance = 0.4
hdr/max_luminance = 8.0
hdr/exposure_adj_speed = 0.5
fog/enabled = false
fog/begin = 100.0
fog/begin_color = Color( 0, 0, 0, 1 )
fog/end_color = Color( 0, 0, 0, 1 )
fog/attenuation = 1.0
fog/bg = true
bcs/enabled = false
bcs/brightness = 1.0
bcs/contrast = 1.0
bcs/saturation = 1.0
srgb/enabled = false

[sub_resource type="BoxShape" id=2]

extents = Vector3( 1, 1, 1 )

[sub_resource type="BoxShape" id=3]

extents = Vector3( 1, 1, 1 )

[node name="Spatial" type="Spatial"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
environment = SubResource( 1 )

[node name="PlayerController" type="KinematicBody" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 37.2788, 0 )
input/ray_pickable = true
input/capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collide_with/static = false
collide_with/kinematic = false
collide_with/rigid = false
collide_with/character = false
collision/margin = 0.001
script/script = ExtResource( 1 )
joystick_input_sensitivity = 0.1

[node name="PlayerMesh" type="TestCube" parent="PlayerController"]

editor/display_folded = true
_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0 )
layers = 1
geometry/visible = true
geometry/material_override = null
geometry/cast_shadow = 1
geometry/receive_shadows = true
geometry/range_begin = 0.0
geometry/range_end = 0.0
geometry/extra_cull_margin = 0.0
geometry/billboard = false
geometry/billboard_y = false
geometry/depth_scale = false
geometry/visible_in_all_rooms = false
geometry/use_baked_light = false
geometry/baked_light_tex_id = 0

[node name="TestCube" type="TestCube" parent="PlayerController/PlayerMesh"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 0.0257608, 0, -0.562121, 0, 0.115819, 0, 2.24848, 0, 0.00644019, -0.0672169, 0.0637708, -3.32478 )
layers = 1
geometry/visible = true
geometry/material_override = null
geometry/cast_shadow = 1
geometry/receive_shadows = true
geometry/range_begin = 0.0
geometry/range_end = 0.0
geometry/extra_cull_margin = 0.0
geometry/billboard = false
geometry/billboard_y = false
geometry/depth_scale = false
geometry/visible_in_all_rooms = false
geometry/use_baked_light = false
geometry/baked_light_tex_id = 0

[node name="CollisionShape" type="CollisionShape" parent="PlayerController"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="PlayerRayDown" type="RayCast" parent="PlayerController"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, -2, 0 )
layer_mask = 1
type_mask = 1

[node name="PlayerCamera" type="Camera" parent="PlayerController"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.94863, 4.46373, 0.912588 )
projection = 0
fov = 60.0
near = 0.1
far = 1000.0
keep_aspect = 1
current = false
visible_layers = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
script/script = ExtResource( 2 )
bool_controller_playstation = true
bool_controller_keyboard = false
max_radius = 120.0

[node name="CameraRay" type="RayCast" parent="PlayerController/PlayerCamera"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, -1, 0 )
layer_mask = 1
type_mask = 15

[node name="Ground" parent="." instance=ExtResource( 3 )]

transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.25548, 0 )

[node name="ShowFPS" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 14.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script/script = ExtResource( 4 )

[node name="house" parent="." instance=ExtResource( 5 )]

transform/local = Transform( 5.49432, 0, 0, 0, 5.49432, 0, 0, 0, 5.49432, -40.7903, -1.47459, 0 )

[node name="StaticBody" type="StaticBody" parent="house/house"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
input/ray_pickable = true
input/capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Transform( 1.39551, 0, 0, 0, 1.39551, 0, 0, 0, 1.39551, 0, 1.5558, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
friction = 1.0
bounce = 0.0
constant_linear_velocity = Vector3( 0, 0, 0 )
constant_angular_velocity = Vector3( 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="house/house/StaticBody"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1.39551, 0, 0, 0, 1.39551, 0, 0, 0, 1.39551, 0, 1.5558, 0 )
shape = SubResource( 3 )
trigger = false
_update_shape_index = 0


[editable path="house"]
